@@ -23,5 +23,6 @@ INCLUDEPATH += ../../db-2.7.7/build_unix
 
 LIBS += -L../../db-2.7.7/build_unix -ldb
 LIBS += -L/usr/lib
+unix:linux-g++:LIBS += -ldl
 
 
